--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -10,6 +10,7 @@
 
 @import "http://fonts.googleapis.com/css?family=PT+Sans:400,700|Source+Code+Pro";
 @import "../../../stylesheets/application.css";
+@import "custom.css";
 
 @font-face {
   font-family: 'FontAwesome';
@@ -17,14 +18,6 @@
   src: url('font/fontawesome-webfont.eot?#iefix&v=3.1.0') format('embedded-opentype'), url('font/fontawesome-webfont.woff?v=3.1.0') format('woff'), url('font/fontawesome-webfont.ttf?v=3.1.0') format('truetype'), url('font/fontawesome-webfont.svg#fontawesomeregular?v=3.1.0') format('svg');
   font-weight: normal;
   font-style: normal;
-}
-
-body
-{
-	padding-top:90px;
-	background-image:url(images/bg/bg.gif);
-	background-repeat:repeat-x;
-	background-position:center top
 }
 
 body,#wrapper
@@ -326,13 +319,6 @@ ul.projects li.root
 #main.nosidebar #content
 {
 	width:auto
-}
-
-#sidebar
-{
-	width:26%;
-	background:url(images/logo.png) no-repeat center top;
-	padding-top:80px
 }
 
 #sidebar a,#sidebar a.selected
