--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -10,6 +10,7 @@
 
 @import "http://fonts.googleapis.com/css?family=PT+Sans:400,700|Source+Code+Pro";
 @import "../../../stylesheets/application.css";
+@import "icons.css";
 @import "custom.css";
 
 @font-face {
