Replaced http import to https for #3

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -8,7 +8,7 @@
  */
 
 
-@import "http://fonts.googleapis.com/css?family=PT+Sans:400,700|Source+Code+Pro";
+@import "https://fonts.googleapis.com/css?family=PT+Sans:400,700|Source+Code+Pro";
 @import "../../../stylesheets/application.css";
 @import "icons.css";
 @import "custom.css";
